# api

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0001_initial_schema.py  20260525_0001_initial.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  auth.py  contact.py  link.py  note.py  otp.py  otp_code.py  session.py  upload.py  uploaded_file.py  user.py
backend/app/routers/: __init__.py  auth.py  contacts.py  links.py  notes.py  uploads.py
backend/app/schemas/: __init__.py  auth.py  contact.py  link.py  (+3 more)
desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts  tauri.conf.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  api.ts  index.css  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthPanel.tsx  AvatarUpload.tsx  ContactForm.tsx  Dashboard.tsx  LinkForm.tsx  Navbar.tsx  Toast.tsx  ui.tsx  vault-app.tsx
frontend/lib/: api.ts  auth-context.tsx  types.ts
frontend/styles/: globals.css  theme.css
mobile/: App.tsx  README.md  app.json  eas.json  package-lock.json  package.json
mobile/app/: App.tsx  _layout.tsx  api.ts  auth.tsx  index.tsx
mobile/components/: AvatarPicker.tsx  Button.tsx  Card.tsx  ContactForm.tsx  EmptyState.tsx  Field.tsx  Header.tsx  LinkForm.tsx  Toast.tsx
mobile/lib/: api.ts  auth.tsx  storage.ts  theme.ts
(+89 files in other folders)
