[package]
name = "satosave-vault"
version = "1.0.0"
description = "SatoSave Vault - Secure personal data vault"
authors = ["SatoSave Team"]
license = "MIT"
repository = ""
default-run = "satosave-vault"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "satosave_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "satosave-vault"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
