[package]
name = "satosave-vault-desktop"
version = "1.0.0"
description = "SatoSave Vault desktop client (Tauri)"
authors = ["SatoSave Vault"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
