[package]
name = "satosave-vault"
version = "1.0.0"
description = "SatoSave Vault desktop app"
authors = ["SatoSave"]
edition = "2021"

[lib]
name = "satosave_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
